Bug 449330 - Filtering is broken in the «Open With…» / «Choose Application» dialog
Summary: Filtering is broken in the «Open With…» / «Choose Application» dialog
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-01-29 15:56 UTC by ratijas
Modified: 2022-02-03 23:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.91
Sentry Crash Report:


Attachments
KIO - Open With filtering is broken (66.39 KB, image/png)
2022-01-29 15:56 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-01-29 15:56:59 UTC
Created attachment 146047 [details]
KIO - Open With filtering is broken

SUMMARY

Filtering is broken in the list of applications to choose to open an item with. It barely filters anything, although something's still happening: at least the top-level (groups) become expanded, so the whole tree view becomes really long.

STEPS TO REPRODUCE
1. Right click on any file
2. Click «Open With…»
3. In the dialog window that appears, type in some app's name.

OBSERVED RESULT
Results are not actually filtered. All applications groups become expanded when the first letter is typed in, and they keep staying that way (until manually collapsed, of course).

EXPECTED RESULT
Results should be filtered to a substring or something. This is clearly a regression, as it was perfectly working some time ago.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.16.2-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Comment 1 Viorel-Cătălin Răpițeanu 2022-01-29 15:58:00 UTC
I can also reproduce this with the latest build compiled from sources.
Comment 2 Bug Janitor Service 2022-01-30 00:36:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/739
Comment 3 Ahmad Samir 2022-01-30 08:50:31 UTC
Git commit d2954ae7d46a2ae85a838ea144f9cddfd49342cf by Ahmad Samir, on behalf of Nicolas Fella.
Committed on 30/01/2022 at 08:50.
Pushed by ahmadsamir into branch 'master'.

[kopenwithdialog] Fix filtering

We call setFilterFixedString, which updates filterRegExp, but not filterRegularExpression in Qt5

In Qt6 this is fixed

M  +5    -0    src/widgets/kopenwithdialog.cpp

https://invent.kde.org/frameworks/kio/commit/d2954ae7d46a2ae85a838ea144f9cddfd49342cf