[kopenwithdialog] Fix filtering

We call setFilterFixedString, which updates filterRegExp, but not filterRegularExpression in Qt5

In Qt6 this is fixed

BUG: 449330